# GLSLSourceProcessor

./: CMakeLists.txt  LICENSE  README.md  glsl_source_processor.h  glsl_source_processor.inl  main.cpp
include/glsl/: glsl_source_processor.h  glsl_source_processor.inl
shaders/include/common/: example.glsl
shaders/src/: example.glsl
